--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -16,7 +16,7 @@ import Button from './Button.astro';
   </div>
 
   <!-- Contenido principal con animaciones escalonadas -->
-  <div class="relative z-10 flex items-center justify-center min-h-screen">
+  <div class="relative z-10 flex items-center justify-center min-h-screen pt-16">
     <div class="container mx-auto px-6 py-12">
       
       <!-- Header con introducción animada -->
