--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<main class="pt-20">
+	<main>
 		<section id="home" class="reveal">
 			<Welcome />
 		</section>
