--- a/src/components/SoftSkills.astro
+++ b/src/components/SoftSkills.astro
@@ -7,14 +7,20 @@
         <div class="bubble" data-skill="Effective Communication">
             <span>Effective Communication</span>
         </div>
-        <div class="bubble" data-skill="Teamwork and Collaboration">
-            <span>Teamwork and Collaboration</span>
+        <div class="bubble" data-skill="Teamwork">
+            <span>Teamwork</span>
+        </div>
+        <div class="bubble" data-skill="Collaboration">
+            <span>Collaboration</span>
         </div>
         <div class="bubble" data-skill="Problem-Solving">
             <span>Problem-Solving</span>
         </div>
-        <div class="bubble" data-skill="Critical and Analytical Thinking">
-            <span>Critical and Analytical Thinking</span>
+        <div class="bubble" data-skill="Critical Thinking">
+            <span>Critical Thinking</span>
+        </div>
+        <div class="bubble" data-skill="Analytical Thinking">
+            <span>Analytical Thinking</span>
         </div>
         <div class="bubble" data-skill="Adaptability">
             <span>Adaptability</span>
